--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,50 +3,133 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/logo" />
+        android:layout_width="383sp"
+        android:layout_height="290sp"
+
+        app:srcCompat="@drawable/loginpageimage" />
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="bottom"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_gravity="center"
+
+            android:layout_marginLeft="40sp"
+            android:layout_marginRight="40sp"
+
+            android:background="@color/signupbtsbg"
+            android:drawableLeft="@drawable/email_outline"
             android:gravity="center"
-            android:hint="Enter your Email here"
-            android:inputType="textEmailAddress" />
+            android:hint="Email"
+
+            android:inputType="textEmailAddress"
+            android:paddingBottom="10sp"
+
+            android:paddingLeft="15sp"
+            android:paddingRight="39sp"
+            android:layout_marginTop="10sp"
+            android:paddingTop="10sp"
+            />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:drawableLeft="@drawable/lock_outline"
+            android:paddingLeft="15sp"
+            android:paddingRight="39sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+
+            android:layout_marginBottom="10sp"
+            android:layout_marginLeft="40sp"
+            android:layout_marginRight="40sp"
+            android:layout_marginTop="10sp"
+            android:background="@color/signupbtsbg"
             android:gravity="center"
-            android:hint="Enter your password here"
+            android:hint="Password"
             android:inputType="textPassword" />
 
         <Button
             android:id="@+id/buttonSignin"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="Sign In or Register"
-            android:textStyle="italic" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="40sp"
+            android:layout_marginRight="40sp"
+            android:layout_marginBottom="10sp"
+            android:background="@color/colorPrimary"
+            android:text="SIGN IN"
+            android:textColor="@color/white" />
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_margin="10sp">
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Don't have any account?"
+
+                android:gravity="center"
+                />
+            <TextView
+                android:id="@+id/signUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign Up"
+                android:textStyle="bold"
+                android:layout_marginLeft="5sp"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_margin="10sp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/buttonFacebook"
+                android:layout_width="64sp"
+                android:layout_height="match_parent"
+
+                android:background="@android:color/transparent"
+                android:paddingRight="10dp"
+                app:srcCompat="@mipmap/facebook2" />
+
+
+            <ImageView
+                android:background="@android:color/transparent"
+                android:paddingLeft="10dp"
+
+                android:id="@+id/buttonGoogle"
+                android:layout_width="64sp"
+                android:layout_height="wrap_content"
+
+                app:srcCompat="@mipmap/google2" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
