--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.goinoutgames.www.goinoutgames.MainActivity"
-    android:background="#F2F0EB"
-    android:orientation="vertical"
-    android:weightSum="1">
+        <android.support.v4.widget.DrawerLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.goinoutgames.www.goinoutgames.MainActivity"
+            android:id="@+id/drawer_layout">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:orientation="vertical"    >
 
 
-    <TextView
-        android:id="@+id/textView"
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="inherit"
-        android:layout_marginTop="5dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="10dp"
-        android:textSize="17dp"
-        android:paddingLeft="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:textColor="#999"
-        android:textStyle="bold"
-        android:text="List of nearby events :"
-        android:gravity="center"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/my_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/white"
+                    android:elevation="4dp"
+                    android:weightSum="1"
+                    >
 
-        />
 
-    <ExpandableListView
-        android:id="@+id/listViewEvents"
-        android:background="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_alignParentStart="true"
-        android:layout_weight="1.2" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="HOME"
+                android:textColor="@color/colorPrimary"
+                android:paddingLeft="-63sp"
+                android:gravity="center"
+                android:textSize="20dp"
+
+                />
+
+            <ImageButton
+                android:id="@+id/addEvent"
+                android:layout_width="24sp"
+                android:layout_height="24sp"
+                app:srcCompat="@drawable/plus"
+                android:layout_gravity="right"
+                android:layout_marginRight="18sp"
+                android:background="@android:color/white"
+
+
+                />
+
+
+        </android.support.v7.widget.Toolbar>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="108dp"
         android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-         >
+        android:background="@color/colorPrimary">
 
+
+        <TextView
+            android:id="@+id/textView"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+
+
+            android:layout_weight="1"
+            android:fontFamily="inherit"
+            android:layout_gravity="bottom"
+            android:gravity="center|right"
+            android:text="LIST OF NEARBY GAMES:"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -55,21 +89,29 @@
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
 
             app:srcCompat="@drawable/logo" />
 
-        <TextView
-            android:id="@+id/textView2"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:fontFamily="inherit"
-            android:gravity="center"
-            android:text="Unreal party meetup games for your virtually real world reality"
-            android:textColor="#f57e41"
-            android:textSize="15dp" />
-
     </LinearLayout>
+
+    <ExpandableListView
+        android:id="@+id/listViewEvents"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_alignParentStart="true"
+        android:layout_weight="1.2" />
+
 </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header">
+
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
