--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/action_settings" android:title="Logout"
+    <!--item android:id="@+id/action_settings" android:title="Logout"
         android:orderInCategory="100"
+        android:icon="@drawable/common_google_signin_btn_icon_dark"
         app:showAsAction="never"
-        />
+        /-->
+    <item
+        android:id="@+id/addEvent"
+        app:showAsAction="always"
+        android:icon="@drawable/plus"
+        android:title="" />
+
 </menu>
