--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F4874A</color>
+    <color name="colorPrimary">#F27E40</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#F4874A</color>
+    <color name="colorAccent">#F27E40</color>
+    <color name="white">#FFFFFF</color>
+    <color name="signupbtsbg">#80bebebe</color>
 </resources>
