--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,34 +22,43 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/white"
                     android:elevation="4dp"
-                    android:weightSum="1"
+
                     >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/refresh"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="HOME"
+                            android:textColor="@color/colorPrimary"
+
+                            android:gravity="center"
+                            android:textSize="20dp"
+                            android:layout_weight="1"
+
+                            />
+
+                        <ImageButton
+                            android:id="@+id/addEvent"
+                            android:layout_width="match_parent"
+                            android:layout_height="24sp"
+                            app:srcCompat="@drawable/plus"
+                            android:layout_gravity="right"
+                            android:layout_marginRight="18sp"
+                            android:background="@android:color/white"
+                            android:layout_weight="6"
+
+
+                            />
+                    </LinearLayout>
 
 
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="HOME"
-                android:textColor="@color/colorPrimary"
-                android:paddingLeft="-63sp"
-                android:gravity="center"
-                android:textSize="20dp"
 
-                />
-
-            <ImageButton
-                android:id="@+id/addEvent"
-                android:layout_width="24sp"
-                android:layout_height="24sp"
-                app:srcCompat="@drawable/plus"
-                android:layout_gravity="right"
-                android:layout_marginRight="18sp"
-                android:background="@android:color/white"
-
-
-                />
 
 
         </android.support.v7.widget.Toolbar>
